--- a/catalog.html
+++ b/catalog.html
@@ -83,22 +83,22 @@
   <main>
     <div class="catalog-page container">
 
-      <div class="breadcrumbs">
-        <ul class="breadcrumbs-list">
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a href="catalog.html">Каталог</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a href="#">Инструмент</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a>Перфораторы</a>
-          </li>
-        </ul>
-      </div>
+
+      <ul class="breadcrumbs-list">
+        <li>
+          <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог</a>
+        </li>
+        <li>
+          <a href="#">Инструмент</a>
+        </li>
+        <li class="breadcrumbs-active">
+          Перфораторы
+        </li>
+      </ul>
+
 
       <h1 class="catalog-title">Перфораторы</h1>
 
@@ -110,16 +110,28 @@
 
           <fieldset class="range">
             <legend>Цена:</legend>
-            <label>
-              <span class="visually-hidden">Укажите минимальную цену</span>
-              <input type="number" name="min" placeholder="0" min="0" max="30000">
-            </label>
-            <label>
-              <span class="visually-hidden">Укажите максимальную цену до 30000</span>
-              <input type="number" name="max" placeholder="30000" min="0" max="30000">
-            </label>
+
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar" style="width: 82%;"></div>
+                </div>
+                <div class="toggle toggle-min" tabindex="0" style="left: 8%"></div>
+                <div class="toggle toggle-max" tabindex="0" style="left: 73%"></div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">
+                  <input type="number" name="min-price" value="0">
+                </label>
+                <label class="max-price">
+                  <input type="number" name="max-price" value="30000">
+                </label>
+              </div>
+            </div>
           </fieldset>
           <hr>
+
+
           <fieldset>
             <legend>Производители:</legend>
             <ul>
@@ -185,7 +197,7 @@
             </li>
           </ul>
           <div class="sorting-button">
-            <button class="button-up active" type="button">
+            <button class="button-active" type="button">
               <span class="visually-hidden">От меньшего к большему</span>
             </button>
             <button class="button-down" type="button">
@@ -207,14 +219,14 @@
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
             </div>
             <div class="button-item">
               <button class="button-buy" type="submit">Купить</button>
               <button class="button-bookmark" type="submit">В закладки</button>
             </div>
-            <span class="label product-label">New</span>
+            <span class="label product-label"></span>
           </li>
 
           <li class="product-item">
@@ -226,7 +238,7 @@
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
             </div>
             <div class="button-item">
@@ -244,14 +256,14 @@
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
             </div>
             <div class="button-item">
               <button class="button-buy" type="submit">Купить</button>
               <button class="button-bookmark" type="submit">В закладки</button>
             </div>
-            <span class="label product-label">New</span>
+            <span class="label product-label"></span>
           </li>
 
           <li class="product-item">
@@ -263,14 +275,14 @@
               <a href="#">Перфоратор BOSCH BFG 3000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>15500 Р.</p>
             </div>
             <div class="button-item">
               <button class="button-buy" type="submit">Купить</button>
               <button class="button-bookmark" type="submit">В закладки</button>
             </div>
-            <span class="label product-label">New</span>
+            <span class="label product-label"></span>
           </li>
 
           <li class="product-item">
@@ -282,7 +294,7 @@
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
             </div>
             <div class="button-item">
@@ -316,7 +328,7 @@
               <a href="#">Перфоратор BOSCH BFG 3000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>15500 Р.</p>
             </div>
             <div class="button-item">
@@ -334,14 +346,14 @@
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
             <div class="price">
-              <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+              <del class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</del>
               <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
             </div>
             <div class="button-item">
               <button class="button-buy" type="submit">Купить</button>
               <button class="button-bookmark" type="submit">В закладки</button>
             </div>
-            <span class="label product-label">New</span>
+            <span class="label product-label"></span>
           </li>
 
           <li class="product-item">
