--- a/catalog.html
+++ b/catalog.html
@@ -387,7 +387,7 @@
 
     <section class="category-descr">
       <div class="container">
-        <h2 class="title">ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+        <h2 class="title">Пара слов о перфораторах</h2>
         <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
           кирпиче, бетоне и камне.</p>
         <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
@@ -474,13 +474,13 @@
 
   </footer>
 
-  <div class="popup-notify">
+  <div class="modal modal-notify">
     <p>Товар добавлен в корзину!</p>
-    <div class="popup-notify-link">
+    <div class="modal-notify-link">
       <a class="button button-buy-popap" href="#">Оформить заказ</a>
       <a class="button button-continue-popap" href="#">Продолжить покупки</a>
     </div>
-    <button class="button-close" type="button"><span class="visually-hidden">Закрыть уведомление</span></button>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть уведомление</span></button>
   </div>
 
 </body>
