--- a/catalog.html
+++ b/catalog.html
@@ -484,6 +484,8 @@
     <button class="modal-close" type="button"><span class="visually-hidden">Закрыть уведомление</span></button>
   </div>
 
+  <script src="js/notify.min.js"></script>
+
 </body>
 
 </html>
