--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           заехав в наш офис:
         </p>
         <figure>
-          <a href="#">
+          <a class="contacts-link" href="#">
             <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
           </a>
         </figure>
@@ -434,8 +434,13 @@
 
   <div class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
-    <img src="img/modal-map.jpg" width="943" height="442"
-      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+      width="943" height="442" allowfullscreen></iframe>
+    <p>
+      <img src="img/modal-map.jpg" width="943" height="442"
+        alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    </p>
     <button class="modal-close" type="button">
       <span class="visually-hidden">Закрыть карту</span>
     </button>
@@ -466,6 +471,15 @@
     <button class="modal-close" type="button">
       <span class="visually-hidden">Закрыть форму обратной связи</span>
     </button>
+  </div>
+
+  <div class="modal modal-notify">
+    <p>Товар добавлен в корзину!</p>
+    <div class="modal-notify-link">
+      <a class="button button-buy-popap" href="#">Оформить заказ</a>
+      <a class="button button-continue-popap" href="#">Продолжить покупки</a>
+    </div>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть уведомление</span></button>
   </div>
 
   <script src="js/script.min.js"></script>
